# HomeWork_31

./: db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
HomeWork_27/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_user_location.py  0002_categories.py  0003_location_remove_ads_address_ads_category_ads_image_and_more.py  0003_remove_user_location.py  0004_alter_user_last_name.py  0005_alter_ads_description.py  0006_alter_ads_options_alter_categories_options_and_more.py  0007_rename_author_id_ads_author_and_more.py  0008_alter_ads_image.py  0009_alter_location_name.py  0010_alter_user_managers_user_date_joined_user_email_and_more.py  0011_selection.py  0012_alter_selection_options_alter_user_role.py  0013_categories_slug_user_birth_date_alter_ads_name_and_more.py  0014_alter_categories_slug.py  0015_alter_user_birth_date.py  0016_alter_user_age_alter_user_location.py
ads/permissions/: ads_permissions.py  permissions.py
ads/serializers/: ad_serialize.py  cat_serialize.py  selection_serialize.py  user_serialize.py
ads/urls/: urls_ads.py  urls_cat.py  urls_selecion.py  urls_user.py
ads/validators/: user_validators.py
ads/views/: views_ads.py  views_cat.py  views_location.py  views_selection.py  views_user.py
csv_data/: csv_to_json.py
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrive_test.py
tests/selection/: selection_create_test.py
